Description too long for chrome webstore

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name" : "InTechnology branded Xtended Dialer for Google Chrome™",
+  "name" : "InTechnology Dialer for Google Chrome™",
   "version" : "0.1",
   "description" : "A Google Chrome™ extension that provides BroadWorks telephony integration.",
   "manifest_version": 2,
